Codigo/sintaxis.output
Grammar

    0 $accept: program $end

    1 $@1: ε

    2 program: $@1 ID LPAREN RPAREN LBRACE declarations statement_list RBRACE

    3 $@2: ε

    4 declarations: declarations VAR_DECL tipo $@2 var_list SEMIC

    5 $@3: ε

    6 declarations: declarations CONST_DECL tipo $@3 const_list SEMIC
    7             | ε

    8 tipo: INT_TYPE

    9 var_list: ID
   10         | var_list COMMA ID

   11 const_list: ID ASSIGN expression
   12           | const_list COMMA ID ASSIGN expression

   13 statement_list: statement_list statement
   14               | ε

   15 statement: ID ASSIGN asig SEMIC
   16          | LBRACE statement_list RBRACE
   17          | IF_ST LPAREN expression RPAREN statement ELSE_ST statement
   18          | IF_ST LPAREN expression RPAREN statement
   19          | WHILE_ST LPAREN expression RPAREN statement
   20          | PRINT_ST LPAREN print_list RPAREN SEMIC
   21          | READ_ST LPAREN read_list RPAREN SEMIC

   22 asig: ID ASSIGN asig
   23     | expression

   24 print_list: print_item
   25           | print_list COMMA print_item

   26 print_item: expression
   27           | STRING

   28 read_list: ID
   29          | read_list COMMA ID

   30 expression: expression ADD expression
   31           | expression SUB expression
   32           | expression MUL expression
   33           | expression DIV expression
   34           | LPAREN expression QMARK expression COLON expression RPAREN
   35           | SUB expression
   36           | LPAREN expression RPAREN
   37           | ID
   38           | NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <str> (258) 2 9 10 11 12 15 22 28 29 37
    STRING <str> (259) 27
    NUM <str> (260) 38
    VAR_DECL (261) 4
    CONST_DECL (262) 6
    INT_TYPE (263) 8
    IF_ST (264) 17 18
    ELSE_ST (265) 17
    WHILE_ST (266) 19
    PRINT_ST (267) 20
    READ_ST (268) 21
    ASSIGN (269) 11 12 15 22
    ADD (270) 30
    SUB (271) 31 35
    MUL (272) 32
    DIV (273) 33
    LPAREN (274) 2 17 18 19 20 21 34 36
    RPAREN (275) 2 17 18 19 20 21 34 36
    LBRACE (276) 2 16
    RBRACE (277) 2 16
    COMMA (278) 10 12 25 29
    SEMIC (279) 4 6 15 20 21
    QMARK (280) 34
    COLON (281) 34
    LOWER_THAN_ELSE (282)


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    program (29)
        on left: 2
        on right: 0
    $@1 (30)
        on left: 1
        on right: 2
    declarations <codigo> (31)
        on left: 4 6 7
        on right: 2 4 6
    $@2 (32)
        on left: 3
        on right: 4
    $@3 (33)
        on left: 5
        on right: 6
    tipo (34)
        on left: 8
        on right: 4 6
    var_list (35)
        on left: 9 10
        on right: 4 10
    const_list <codigo> (36)
        on left: 11 12
        on right: 6 12
    statement_list <codigo> (37)
        on left: 13 14
        on right: 2 13 16
    statement <codigo> (38)
        on left: 15 16 17 18 19 20 21
        on right: 13 17 18 19
    asig <codigo> (39)
        on left: 22 23
        on right: 15 22
    print_list <codigo> (40)
        on left: 24 25
        on right: 20 25
    print_item <codigo> (41)
        on left: 26 27
        on right: 24 25
    read_list <codigo> (42)
        on left: 28 29
        on right: 21 29
    expression <codigo> (43)
        on left: 30 31 32 33 34 35 36 37 38
        on right: 11 12 17 18 19 23 26 30 31 32 33 34 35 36


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 • ID LPAREN RPAREN LBRACE declarations statement_list RBRACE

    ID  shift, and go to state 4


State 3

    0 $accept: program $end •

    $default  accept


State 4

    2 program: $@1 ID • LPAREN RPAREN LBRACE declarations statement_list RBRACE

    LPAREN  shift, and go to state 5


State 5

    2 program: $@1 ID LPAREN • RPAREN LBRACE declarations statement_list RBRACE

    RPAREN  shift, and go to state 6


State 6

    2 program: $@1 ID LPAREN RPAREN • LBRACE declarations statement_list RBRACE

    LBRACE  shift, and go to state 7


State 7

    2 program: $@1 ID LPAREN RPAREN LBRACE • declarations statement_list RBRACE

    $default  reduce using rule 7 (declarations)

    declarations  go to state 8


State 8

    2 program: $@1 ID LPAREN RPAREN LBRACE declarations • statement_list RBRACE
    4 declarations: declarations • VAR_DECL tipo $@2 var_list SEMIC
    6             | declarations • CONST_DECL tipo $@3 const_list SEMIC

    VAR_DECL    shift, and go to state 9
    CONST_DECL  shift, and go to state 10

    $default  reduce using rule 14 (statement_list)

    statement_list  go to state 11


State 9

    4 declarations: declarations VAR_DECL • tipo $@2 var_list SEMIC

    INT_TYPE  shift, and go to state 12

    tipo  go to state 13


State 10

    6 declarations: declarations CONST_DECL • tipo $@3 const_list SEMIC

    INT_TYPE  shift, and go to state 12

    tipo  go to state 14


State 11

    2 program: $@1 ID LPAREN RPAREN LBRACE declarations statement_list • RBRACE
   13 statement_list: statement_list • statement

    ID        shift, and go to state 15
    IF_ST     shift, and go to state 16
    WHILE_ST  shift, and go to state 17
    PRINT_ST  shift, and go to state 18
    READ_ST   shift, and go to state 19
    LBRACE    shift, and go to state 20
    RBRACE    shift, and go to state 21

    statement  go to state 22


State 12

    8 tipo: INT_TYPE •

    $default  reduce using rule 8 (tipo)


State 13

    4 declarations: declarations VAR_DECL tipo • $@2 var_list SEMIC

    $default  reduce using rule 3 ($@2)

    $@2  go to state 23


State 14

    6 declarations: declarations CONST_DECL tipo • $@3 const_list SEMIC

    $default  reduce using rule 5 ($@3)

    $@3  go to state 24


State 15

   15 statement: ID • ASSIGN asig SEMIC

    ASSIGN  shift, and go to state 25


State 16

   17 statement: IF_ST • LPAREN expression RPAREN statement ELSE_ST statement
   18          | IF_ST • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 26


State 17

   19 statement: WHILE_ST • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 27


State 18

   20 statement: PRINT_ST • LPAREN print_list RPAREN SEMIC

    LPAREN  shift, and go to state 28


State 19

   21 statement: READ_ST • LPAREN read_list RPAREN SEMIC

    LPAREN  shift, and go to state 29


State 20

   16 statement: LBRACE • statement_list RBRACE

    $default  reduce using rule 14 (statement_list)

    statement_list  go to state 30


State 21

    2 program: $@1 ID LPAREN RPAREN LBRACE declarations statement_list RBRACE •

    $default  reduce using rule 2 (program)


State 22

   13 statement_list: statement_list statement •

    $default  reduce using rule 13 (statement_list)


State 23

    4 declarations: declarations VAR_DECL tipo $@2 • var_list SEMIC

    ID  shift, and go to state 31

    var_list  go to state 32


State 24

    6 declarations: declarations CONST_DECL tipo $@3 • const_list SEMIC

    ID  shift, and go to state 33

    const_list  go to state 34


State 25

   15 statement: ID ASSIGN • asig SEMIC

    ID      shift, and go to state 35
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    asig        go to state 39
    expression  go to state 40


State 26

   17 statement: IF_ST LPAREN • expression RPAREN statement ELSE_ST statement
   18          | IF_ST LPAREN • expression RPAREN statement

    ID      shift, and go to state 41
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    expression  go to state 42


State 27

   19 statement: WHILE_ST LPAREN • expression RPAREN statement

    ID      shift, and go to state 41
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    expression  go to state 43


State 28

   20 statement: PRINT_ST LPAREN • print_list RPAREN SEMIC

    ID      shift, and go to state 41
    STRING  shift, and go to state 44
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    print_list  go to state 45
    print_item  go to state 46
    expression  go to state 47


State 29

   21 statement: READ_ST LPAREN • read_list RPAREN SEMIC

    ID  shift, and go to state 48

    read_list  go to state 49


State 30

   13 statement_list: statement_list • statement
   16 statement: LBRACE statement_list • RBRACE

    ID        shift, and go to state 15
    IF_ST     shift, and go to state 16
    WHILE_ST  shift, and go to state 17
    PRINT_ST  shift, and go to state 18
    READ_ST   shift, and go to state 19
    LBRACE    shift, and go to state 20
    RBRACE    shift, and go to state 50

    statement  go to state 22


State 31

    9 var_list: ID •

    $default  reduce using rule 9 (var_list)


State 32

    4 declarations: declarations VAR_DECL tipo $@2 var_list • SEMIC
   10 var_list: var_list • COMMA ID

    COMMA  shift, and go to state 51
    SEMIC  shift, and go to state 52


State 33

   11 const_list: ID • ASSIGN expression

    ASSIGN  shift, and go to state 53


State 34

    6 declarations: declarations CONST_DECL tipo $@3 const_list • SEMIC
   12 const_list: const_list • COMMA ID ASSIGN expression

    COMMA  shift, and go to state 54
    SEMIC  shift, and go to state 55


State 35

   22 asig: ID • ASSIGN asig
   37 expression: ID •

    ASSIGN  shift, and go to state 56

    $default  reduce using rule 37 (expression)


State 36

   38 expression: NUM •

    $default  reduce using rule 38 (expression)


State 37

   35 expression: SUB • expression

    ID      shift, and go to state 41
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    expression  go to state 57


State 38

   34 expression: LPAREN • expression QMARK expression COLON expression RPAREN
   36           | LPAREN • expression RPAREN

    ID      shift, and go to state 41
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    expression  go to state 58


State 39

   15 statement: ID ASSIGN asig • SEMIC

    SEMIC  shift, and go to state 59


State 40

   23 asig: expression •
   30 expression: expression • ADD expression
   31           | expression • SUB expression
   32           | expression • MUL expression
   33           | expression • DIV expression

    ADD  shift, and go to state 60
    SUB  shift, and go to state 61
    MUL  shift, and go to state 62
    DIV  shift, and go to state 63

    $default  reduce using rule 23 (asig)


State 41

   37 expression: ID •

    $default  reduce using rule 37 (expression)


State 42

   17 statement: IF_ST LPAREN expression • RPAREN statement ELSE_ST statement
   18          | IF_ST LPAREN expression • RPAREN statement
   30 expression: expression • ADD expression
   31           | expression • SUB expression
   32           | expression • MUL expression
   33           | expression • DIV expression

    ADD     shift, and go to state 60
    SUB     shift, and go to state 61
    MUL     shift, and go to state 62
    DIV     shift, and go to state 63
    RPAREN  shift, and go to state 64


State 43

   19 statement: WHILE_ST LPAREN expression • RPAREN statement
   30 expression: expression • ADD expression
   31           | expression • SUB expression
   32           | expression • MUL expression
   33           | expression • DIV expression

    ADD     shift, and go to state 60
    SUB     shift, and go to state 61
    MUL     shift, and go to state 62
    DIV     shift, and go to state 63
    RPAREN  shift, and go to state 65


State 44

   27 print_item: STRING •

    $default  reduce using rule 27 (print_item)


State 45

   20 statement: PRINT_ST LPAREN print_list • RPAREN SEMIC
   25 print_list: print_list • COMMA print_item

    RPAREN  shift, and go to state 66
    COMMA   shift, and go to state 67


State 46

   24 print_list: print_item •

    $default  reduce using rule 24 (print_list)


State 47

   26 print_item: expression •
   30 expression: expression • ADD expression
   31           | expression • SUB expression
   32           | expression • MUL expression
   33           | expression • DIV expression

    ADD  shift, and go to state 60
    SUB  shift, and go to state 61
    MUL  shift, and go to state 62
    DIV  shift, and go to state 63

    $default  reduce using rule 26 (print_item)


State 48

   28 read_list: ID •

    $default  reduce using rule 28 (read_list)


State 49

   21 statement: READ_ST LPAREN read_list • RPAREN SEMIC
   29 read_list: read_list • COMMA ID

    RPAREN  shift, and go to state 68
    COMMA   shift, and go to state 69


State 50

   16 statement: LBRACE statement_list RBRACE •

    $default  reduce using rule 16 (statement)


State 51

   10 var_list: var_list COMMA • ID

    ID  shift, and go to state 70


State 52

    4 declarations: declarations VAR_DECL tipo $@2 var_list SEMIC •

    $default  reduce using rule 4 (declarations)


State 53

   11 const_list: ID ASSIGN • expression

    ID      shift, and go to state 41
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    expression  go to state 71


State 54

   12 const_list: const_list COMMA • ID ASSIGN expression

    ID  shift, and go to state 72


State 55

    6 declarations: declarations CONST_DECL tipo $@3 const_list SEMIC •

    $default  reduce using rule 6 (declarations)


State 56

   22 asig: ID ASSIGN • asig

    ID      shift, and go to state 35
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    asig        go to state 73
    expression  go to state 40


State 57

   30 expression: expression • ADD expression
   31           | expression • SUB expression
   32           | expression • MUL expression
   33           | expression • DIV expression
   35           | SUB expression •

    MUL  shift, and go to state 62
    DIV  shift, and go to state 63

    $default  reduce using rule 35 (expression)


State 58

   30 expression: expression • ADD expression
   31           | expression • SUB expression
   32           | expression • MUL expression
   33           | expression • DIV expression
   34           | LPAREN expression • QMARK expression COLON expression RPAREN
   36           | LPAREN expression • RPAREN

    ADD     shift, and go to state 60
    SUB     shift, and go to state 61
    MUL     shift, and go to state 62
    DIV     shift, and go to state 63
    RPAREN  shift, and go to state 74
    QMARK   shift, and go to state 75


State 59

   15 statement: ID ASSIGN asig SEMIC •

    $default  reduce using rule 15 (statement)


State 60

   30 expression: expression ADD • expression

    ID      shift, and go to state 41
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    expression  go to state 76


State 61

   31 expression: expression SUB • expression

    ID      shift, and go to state 41
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    expression  go to state 77


State 62

   32 expression: expression MUL • expression

    ID      shift, and go to state 41
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    expression  go to state 78


State 63

   33 expression: expression DIV • expression

    ID      shift, and go to state 41
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    expression  go to state 79


State 64

   17 statement: IF_ST LPAREN expression RPAREN • statement ELSE_ST statement
   18          | IF_ST LPAREN expression RPAREN • statement

    ID        shift, and go to state 15
    IF_ST     shift, and go to state 16
    WHILE_ST  shift, and go to state 17
    PRINT_ST  shift, and go to state 18
    READ_ST   shift, and go to state 19
    LBRACE    shift, and go to state 20

    statement  go to state 80


State 65

   19 statement: WHILE_ST LPAREN expression RPAREN • statement

    ID        shift, and go to state 15
    IF_ST     shift, and go to state 16
    WHILE_ST  shift, and go to state 17
    PRINT_ST  shift, and go to state 18
    READ_ST   shift, and go to state 19
    LBRACE    shift, and go to state 20

    statement  go to state 81


State 66

   20 statement: PRINT_ST LPAREN print_list RPAREN • SEMIC

    SEMIC  shift, and go to state 82


State 67

   25 print_list: print_list COMMA • print_item

    ID      shift, and go to state 41
    STRING  shift, and go to state 44
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    print_item  go to state 83
    expression  go to state 47


State 68

   21 statement: READ_ST LPAREN read_list RPAREN • SEMIC

    SEMIC  shift, and go to state 84


State 69

   29 read_list: read_list COMMA • ID

    ID  shift, and go to state 85


State 70

   10 var_list: var_list COMMA ID •

    $default  reduce using rule 10 (var_list)


State 71

   11 const_list: ID ASSIGN expression •
   30 expression: expression • ADD expression
   31           | expression • SUB expression
   32           | expression • MUL expression
   33           | expression • DIV expression

    ADD  shift, and go to state 60
    SUB  shift, and go to state 61
    MUL  shift, and go to state 62
    DIV  shift, and go to state 63

    $default  reduce using rule 11 (const_list)


State 72

   12 const_list: const_list COMMA ID • ASSIGN expression

    ASSIGN  shift, and go to state 86


State 73

   22 asig: ID ASSIGN asig •

    $default  reduce using rule 22 (asig)


State 74

   36 expression: LPAREN expression RPAREN •

    $default  reduce using rule 36 (expression)


State 75

   34 expression: LPAREN expression QMARK • expression COLON expression RPAREN

    ID      shift, and go to state 41
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    expression  go to state 87


State 76

   30 expression: expression • ADD expression
   30           | expression ADD expression •
   31           | expression • SUB expression
   32           | expression • MUL expression
   33           | expression • DIV expression

    MUL  shift, and go to state 62
    DIV  shift, and go to state 63

    $default  reduce using rule 30 (expression)


State 77

   30 expression: expression • ADD expression
   31           | expression • SUB expression
   31           | expression SUB expression •
   32           | expression • MUL expression
   33           | expression • DIV expression

    MUL  shift, and go to state 62
    DIV  shift, and go to state 63

    $default  reduce using rule 31 (expression)


State 78

   30 expression: expression • ADD expression
   31           | expression • SUB expression
   32           | expression • MUL expression
   32           | expression MUL expression •
   33           | expression • DIV expression

    $default  reduce using rule 32 (expression)


State 79

   30 expression: expression • ADD expression
   31           | expression • SUB expression
   32           | expression • MUL expression
   33           | expression • DIV expression
   33           | expression DIV expression •

    $default  reduce using rule 33 (expression)


State 80

   17 statement: IF_ST LPAREN expression RPAREN statement • ELSE_ST statement
   18          | IF_ST LPAREN expression RPAREN statement •

    ELSE_ST  shift, and go to state 88

    $default  reduce using rule 18 (statement)


State 81

   19 statement: WHILE_ST LPAREN expression RPAREN statement •

    $default  reduce using rule 19 (statement)


State 82

   20 statement: PRINT_ST LPAREN print_list RPAREN SEMIC •

    $default  reduce using rule 20 (statement)


State 83

   25 print_list: print_list COMMA print_item •

    $default  reduce using rule 25 (print_list)


State 84

   21 statement: READ_ST LPAREN read_list RPAREN SEMIC •

    $default  reduce using rule 21 (statement)


State 85

   29 read_list: read_list COMMA ID •

    $default  reduce using rule 29 (read_list)


State 86

   12 const_list: const_list COMMA ID ASSIGN • expression

    ID      shift, and go to state 41
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    expression  go to state 89


State 87

   30 expression: expression • ADD expression
   31           | expression • SUB expression
   32           | expression • MUL expression
   33           | expression • DIV expression
   34           | LPAREN expression QMARK expression • COLON expression RPAREN

    ADD    shift, and go to state 60
    SUB    shift, and go to state 61
    MUL    shift, and go to state 62
    DIV    shift, and go to state 63
    COLON  shift, and go to state 90


State 88

   17 statement: IF_ST LPAREN expression RPAREN statement ELSE_ST • statement

    ID        shift, and go to state 15
    IF_ST     shift, and go to state 16
    WHILE_ST  shift, and go to state 17
    PRINT_ST  shift, and go to state 18
    READ_ST   shift, and go to state 19
    LBRACE    shift, and go to state 20

    statement  go to state 91


State 89

   12 const_list: const_list COMMA ID ASSIGN expression •
   30 expression: expression • ADD expression
   31           | expression • SUB expression
   32           | expression • MUL expression
   33           | expression • DIV expression

    ADD  shift, and go to state 60
    SUB  shift, and go to state 61
    MUL  shift, and go to state 62
    DIV  shift, and go to state 63

    $default  reduce using rule 12 (const_list)


State 90

   34 expression: LPAREN expression QMARK expression COLON • expression RPAREN

    ID      shift, and go to state 41
    NUM     shift, and go to state 36
    SUB     shift, and go to state 37
    LPAREN  shift, and go to state 38

    expression  go to state 92


State 91

   17 statement: IF_ST LPAREN expression RPAREN statement ELSE_ST statement •

    $default  reduce using rule 17 (statement)


State 92

   30 expression: expression • ADD expression
   31           | expression • SUB expression
   32           | expression • MUL expression
   33           | expression • DIV expression
   34           | LPAREN expression QMARK expression COLON expression • RPAREN

    ADD     shift, and go to state 60
    SUB     shift, and go to state 61
    MUL     shift, and go to state 62
    DIV     shift, and go to state 63
    RPAREN  shift, and go to state 93


State 93

   34 expression: LPAREN expression QMARK expression COLON expression RPAREN •

    $default  reduce using rule 34 (expression)
